--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,14 +1,70 @@
 <html xmlns="http://www.w3.org/1999/xhtml" lang="es">
-<head>
-  <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-  <title>Escuelita-Zend</title>
-  <?php echo $this->headScript()->appendFile('/js/bootstrap.min.js', 'text/javascript')
-                                ->prependFile("/js/jquery.js", 'text/javascript')
-                                ->prependFile("/jquery-ui/jquery-ui.js")?>
-  <?php echo $this->headLink()->prependStylesheet('/css/bootstrap.min.css') ?>
-  <?php echo $this->headLink()->prependStylesheet('/jquery-ui/jquery-ui.css') ?>
+  <head>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+    <title>Control Escolar</title>
+    <?php echo $this->headScript()->appendFile('/js/bootstrap.min.js', 'text/javascript')?>
+    <?php echo $this->headLink()->prependStylesheet('/css/bootstrap.min.css') ?>
+    <?php echo $this->headScript()->prependFile("/js/jquery.js", 'text/javascript')?>
 
-</head>
-<?php echo $this->layout()->content ?>
-</body>
+  </head>
+  <body>
+    <div class="container">
+      <header>
+        <div align="center">
+            <nav class="navbar navbar-default">
+                <div class="container-fluid">
+                    <!-- Brand and toggle get grouped for better mobile display -->
+                    <div class="navbar-header">
+                        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+                            <span class="sr-only">Toggle navigation</span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                            <span class="icon-bar"></span>
+                        </button>
+                        <a class="navbar-brand" href="http://www.facebook.com">Control escolar</a>
+                    </div>
+
+                    <!-- Collect the nav links, forms, and other content for toggling -->
+                    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+                        <ul class="nav navbar-nav">
+                             <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Alumnos <span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="Alumnos">
+                                    <li><a href="http://projectzend.localhost/Alumnos/index">Control Alumnos</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Cargar Excel CSV</a></li>
+                                </ul>
+                            </li>
+                             <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Materias<span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="Materias">
+                                    <li><a href="http://projectzend.localhost/Materias/index">Control Materias</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Cargar Excel CSV</a></li>
+                                </ul>
+                            </li>
+                            <li class="dropdown">
+                                <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Calificaciones<span class="caret"></span></a>
+                                <ul class="dropdown-menu" role="Calificaciones">
+                                    <li><a href="http://projectzend.localhost/Calificaciones/index">Control Calificaciones</a></li>
+                                    <li class="divider"></li>
+                                    <li><a href="#">Cargar Excel CSV</a></li>
+                                </ul>
+                            </li>
+                        </ul>
+                        <form class="navbar-form navbar-left" role="search">
+                            <div class="form-group">
+                                <input type="text" class="form-control" placeholder="ID Alumno">
+                            </div>
+                            <button type="submit" class="btn btn-default">Buscar</button>
+                        </form>
+                    </div><!-- /.navbar-collapse -->
+                </div><!-- /.container-fluid -->
+            </nav>
+        </div>
+      </header>
+      <?php echo $this->layout()->content ?>
+    </div>
+    <footer></footer>
+  </body>
 </html>
