Se añadieron algunos comentarios relevantes para el modulo de alumnos

--- a/application/views/scripts/alumnos/add.phtml
+++ b/application/views/scripts/alumnos/add.phtml
@@ -1,4 +1,7 @@
-
+<!---
+  Formulario en el se pide información básica para dar de alta el alumno
+  
+-->
 <form class="form-horizontal" method="post" action="set">
   <div class="form-group">
     <label for="nombre" class="col-sm-2 control-label">Nombre(s) : </label>
