Se añadieron cambios para poder eliminar alumnos de la base de datos

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -2,10 +2,9 @@
   <head>
     <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <title>Control Escolar</title>
-    <?php echo $this->headScript()->appendFile('/js/bootstrap.min.js', 'text/javascript')?>
-    <?php echo $this->headLink()->prependStylesheet('/css/bootstrap.min.css') ?>
     <?php echo $this->headScript()->prependFile("/js/jquery.js", 'text/javascript')?>
-
+    <?php echo $this->headScript()->prependFile('/js/bootstrap.min.js', 'text/javascript')?>
+    <?php echo $this->headLink()->prependStylesheet('/css/bootstrap.min.css') ?>
   </head>
   <body>
     <div class="container">
