--- a/application/views/scripts/alumnos/set.phtml
+++ b/application/views/scripts/alumnos/set.phtml
@@ -1,4 +1,7 @@
 <!--
   Vista que muestra si la inserción de un nuevo alumno fue exitosa
 -->
-<?php var_dump($this->out); ?>
+<?php
+  header("Location: http://projectzend.localhost/Alumnos/index");
+  die();
+?>
